--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for PowerDNS-Control-Server
 
+0.02    Fri Jan 18 11:12:55 PST 2008
+        Set the proper PREREQ_PM.
+
 0.01    Mon Dec 31 12:27:25 PST 2007
         Initial release.
 
