--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for PowerDNS-Control-Server
 
+0.03	Fri Jan 13 16:48:43 PST 2012
+	Add the auth_wipe_cache method, and fix the auth_ping method.
+
 0.02    Fri Jan 18 11:12:55 PST 2008
         Set the proper PREREQ_PM.
 
